[package]
name = "drills-gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = "4.2.1"
clap-cargo = "0.10.0"
clap-verbosity-flag = "2.0.1"
colored = "2.0.0"
env_logger = "0.10.0"
human-panic = "1.1.3"
log = "0.4.17"
rusqlite = "0.29.0"
uuid = { version = "1.3.0", features = ["v4"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"
jsonschema = "0.17.0"
chrono = "0.4.24"
dialoguer = "0.10.4"
console = "0.15.5"
indicatif = "0.17.3"
